# SpendHiST

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
ai/: __init__.py
ai/agents/: __init__.py  receipt_analyst.py  sql_agent.py  supervisor.py
ai/memory/: __init__.py
ai/prompts/: __init__.py
ai/tools/: __init__.py  currency_tool.py  db_tool.py  ocr_tool.py  search_tool.py  summarise_tool.py
ai/workflows/: __init__.py
alembic/: env.py
alembic/versions/: 001_ix_receipt_items_receipt_id.py
app/: config.py  db.py  main.py  models.py  ocr.py
app/api/v1/: chat.py  receipts.py  users.py
app/core/: __init__.py  database.py  dependencies.py  rate_limit.py  security.py
app/models/: __init__.py  receipt.py  user.py
app/ocr/: __init__.py  engine.py
app/parser/: __init__.py  ar_parser.py  chat_llm.py  dispatcher.py  en_parser.py  router.py
app/schemas/: chat.py  receipt.py  user.py
app/services/: chat_service.py  llm_service.py  receipt_service.py  receipt_validate.py  upload_service.py  user_service.py
